# mafia

./: README.md  main.py  pyproject.toml  setup.py
examples/: example.py
mafia/: __init__.py  aimodel.py  middleware.py  security.py
mafia/models/: isolation_forest_model.pkl
mafia/utils/: redis_client.py
mkdocs/: mkdocs.yml
mkdocs/docs/: api_reference.md  architecture.md  features.md  future_improvements.md  index-en.md  index.md  installation.md  usage.md
mkdocs/site/: 404.html  index.html
mkdocs/site/index-en/: index.html
mkdocs/site/search/: search_index.json
scripts/: train.py
tests/: conftest.py  test_aimodel.py  test_middleware.py  test_redis_client.py  test_security.py
